--- a/sections/custom-collection-slider.liquid
+++ b/sections/custom-collection-slider.liquid
@@ -10,6 +10,7 @@
     {%  endif %}
     {%  if section.settings.title != blank %}
       <h2 class="h1">{{ section.settings.title }}</h2>
+      <p> Collections products display here </p>
     {%  endif  %}
    <div class="product-list-container" id="product-grid">
     <div id="tabs" class="tabs">
